crates/mockql-core/src/graphql/snapshots/schema_filter/basic_queries/mockql_core__graphql__schema_filter__tests__filter_produces_expected_schema_for_operations@basic_queries__nested_selections.graphql.snap
---
source: crates/mockql-core/src/graphql/schema_filter.rs
expression: "SCHEMA_FILTER.filter(&content,\noperation_name.as_deref()).expect(\"filter should succeed\")"
input_file: crates/mockql-core/src/graphql/snapshots/schema_filter/basic_queries/nested_selections.graphql
---
interface Node {
  id: ID!
  createdAt: String!
}
type Product implements Node & Reviewable {
  name: String
}
type Query {
  me: User
}
type Review implements Node {
  body: String
  product: Product
}
interface Reviewable {
  reviews: [Review]
  averageRating: Float
}
"""
The `String` scalar type represents textual data, represented as UTF-8 character sequences. The String type is most often used by GraphQL to represent free-form human-readable text.
"""
scalar String
type User implements Node {
  name: String
  reviews: [Review]
}
